fixing visibility of controls

--- a/src/css/_shader.css
+++ b/src/css/_shader.css
@@ -11,7 +11,7 @@ canvas.ge_canvas {
     /*position: fixed;*/
     /*right: 0px;*/
     /*overflow: hidden;*/
-	z-index: var(--z-shader);
+	/*z-index: var(--z-shader);*/
 }
 
 .ge_control {
@@ -19,7 +19,7 @@ canvas.ge_canvas {
 	padding: 5px;
 	text-align: center;
 	position: absolute;
-    bottom: 4px;
+    bottom: 0px;
     left: 0px;
     width: 100%;
     background-color: rgba(0,0,0,.5);
